--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "cpython"]
-    path = cpython
+[submodule "packages/cpython"]
+    path = packages/cpython
     url = git://github.com/python/cpython.git
