--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "cpython"]
 	path = cpython
 	url = https://github.com/python/cpython.git
+[submodule "SCL"]
+	path = SCL
+	url = https://github.com/SectonCL/SCL.git
